testsuite/tests/explicit-dicts/should_compile/ExportDict.hs
module ExportDict where

class Class1 a where
    method1 :: a -> Int
