testsuite/tests/explicit-dicts/should_fail/ExportDictOnly.hs
module ExportDictOnly
  ( Class1.Dict
  ) where

class Class1 a where
    method1 :: a -> Int
